fix import on Safari

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ body {
 #root {
 	margin-bottom: 56px;
 }
+
+#importText {
+    -webkit-user-select: all;
+}
